typescript/checker/tests/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1186,
        ),
        hi: BytePos(
            1187,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts:21:25
   |
21 | function foo4(x: typeof b);
   |                         ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1215,
        ),
        hi: BytePos(
            1216,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithCallSignatures3.ts:22:25
   |
22 | function foo4(x: typeof b); // error
   |                         ^

